RDKCOM-4592: RDKBDEV-2440: autotools cleanup
Reason for change:
autotools cleanup
Test Procedure: Sanity.
Risks: None.
Signed-off-by: Andre McCurdy <armccurdy@gmail.com>
Priority: P1

Change-Id: I486cd81a622882106fa4bb7e055227e16dd2f14c

--- a/source/Makefile.am
+++ b/source/Makefile.am
@@ -21,8 +21,6 @@
 
 bin_PROGRAMS = ipoe_health_check
 
-AM_CPPFLAGS = -I$(top_srcdir)/../CcspCommonLibrary/source/ccsp/components/include
-
-ipoe_health_check_CFLAGS = -D_ANSC_LINUX -D_ANSC_USER -D_ANSC_LITTLE_ENDIAN_ -DFEATURE_SUPPORT_RDKLOG $(DBUS_CFLAGS) $(SYSTEMD_CFLAGS)
-ipoe_health_check_SOURCES = ihc_core.c  ihc_main.c
+ipoe_health_check_CFLAGS = -DFEATURE_SUPPORT_RDKLOG $(DBUS_CFLAGS) $(SYSTEMD_CFLAGS)
+ipoe_health_check_SOURCES = ihc_core.c ihc_main.c
 ipoe_health_check_LDFLAGS = -lccsp_common -lrdkloggers -lnanomsg -lsysevent
