RDKBDEV-2670: drop dependency on dbus
Reason for change:
Code Cleanup.
Test Procedure: Sanity.
Risks: None.

Signed-off-by: Andre McCurdy <armccurdy@gmail.com>

--- a/source/Makefile.am
+++ b/source/Makefile.am
@@ -21,6 +21,6 @@
 
 bin_PROGRAMS = ipoe_health_check
 
-ipoe_health_check_CFLAGS = -DFEATURE_SUPPORT_RDKLOG $(DBUS_CFLAGS) $(SYSTEMD_CFLAGS)
+ipoe_health_check_CFLAGS = -DFEATURE_SUPPORT_RDKLOG $(SYSTEMD_CFLAGS)
 ipoe_health_check_SOURCES = ihc_core.c ihc_main.c
 ipoe_health_check_LDFLAGS = -lccsp_common -lrdkloggers -lnanomsg -lsysevent
